# seismic-denoising-eval-protocol

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  LICENSE-DATA  MANIFEST.md  README.md  RELEASE_NOTES_v1.0.3.md  RELEASE_STATUS_v1.0.3.yml  SHA256SUMS.txt  pyproject.toml  seismic-denoising-eval-protocol_v1.0.4.zip.sha256  seismic-denoising-eval-protocol_v1.0.5.zip.sha256
baselines/: README.md
configs/: protocol_paths.example.json  report_card_schema.json
diagnostics/: README.md  covnorm_region_consistency.csv  noise_correlation_by_station.csv  noise_correlation_diagnostic_summary.csv
diagnostics/polarization_rescore/: README.md  oracle_free_polarization_rescore.py  polarization_covnorm_pair_bootstrap.csv  polarization_rescore_by_snr.csv  polarization_rescore_detail.csv  polarization_rescore_summary.csv  polarization_station_bootstrap_vs_identity.csv
diagnostics/recovery_probe/: README.md  oracle_free_recovery_probe.py  recovery_probe_by_snr.csv  recovery_probe_detail.csv  recovery_probe_monotonic_checks.csv  recovery_probe_station_bootstrap_vs_identity.csv  recovery_probe_summary.csv
environments/: environment-deepdenoiser.yml  environment-seismic.yml
indices/: README.md  final_real_272_event_index.csv  oracle_free_816_case_index.csv
legacy_scripts/: README.md  adversarial_baselines_eval.py  external_final_eval.py  n2v_unet_baseline.py  oracle_free_continuous_eval.py  oracle_free_deepdenoiser_eval.py
per_case_metrics/: README.md  final_real_272_all_methods.csv  oracle_free_816_all_methods.csv  self_supervised_identity_summary_gain.csv  six_way_oracle_free_report_card.csv  station_bootstrap_vs_identity.csv
releases/v1.0.4/: ARTIFACT_PACKAGING_DECISION.md  FINAL_RELEASE_VALIDATION.md  README.md  (+4 more)
releases/v1.0.4-rc3/: ARTIFACT_PACKAGING_DECISION.md  DOI_PLACEHOLDERS.yml  EXPERIMENT_DEFINITIONS.md  MANUSCRIPT_RELEASE_UPDATE_CANDIDATE.md  PUBLIC_SHA256SUMS.txt  RC3_VALIDATION_REPORT.md  README.md  RELEASE_NOTES_v1.0.4.md
scripts/: fetch_raspberryshake_windows.py  run_smoke_test.cmd  run_smoke_test.py  verify_advgate_reproduction.py
smoke_outputs/: oracle_free_report_card_smoke.csv
splits/: README.md  development_stations.txt  final_test_stations.txt  train_val_stations.txt
training/: README.md  covnorm_case_study_manifest.md
(+153 files in other folders)
