[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seismic-denoising-eval-protocol"
version = "1.0.3"
description = "Report-card utilities for reproducible self-supervised seismic denoising evaluation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
manuscript = [
    "numpy",
    "obspy",
]
smoke = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
